fix: [WA-518] Fix video gap on hero

--- a/docroot/themes/custom/wateraid/components/hero/hero.scss
+++ b/docroot/themes/custom/wateraid/components/hero/hero.scss
@@ -53,6 +53,9 @@
     width: 100%;
     position: relative;
 
+    div {
+      display: flex;
+    }
     video {
       width: 100%;
       height: 100%;
